Add Dockerfile, CORS; update app & security config
Add a multi-stage Dockerfile to build and run the Spring Boot app. Introduce CorsConfig to explicitly allow frontend origins and standard HTTP methods across /api/** and /**. Update SecurityConfig CORS bean to use explicit allowed origins, methods, headers, disable credentials and set maxAge. Modify application.properties for container deployment: point datasource to s2_db, use environment vars for DB credentials, set server.port to 8080 and bind to 0.0.0.0, replace mail and JWT placeholders, enable multipart limits, and add verbose logging configuration. Also include a trivial newline normalization in Sigmav2Application.